added viewport menu button

--- a/Example_PluginUE/Plugins/Test_Plugin/Test_Plugin.uplugin
+++ b/Example_PluginUE/Plugins/Test_Plugin/Test_Plugin.uplugin
@@ -16,12 +16,11 @@
 	"Modules": [
         {
             "Name": "Test_Plugin",
-            "Type": "Runtime",
-            "LoadingPhase": "Default",
+            "Type": "DeveloperTool",
+            "LoadingPhase": "PostEngineInit",
             "WhitelistPlatforms": [
                 "Win64",
-                "Win32",
-                "HTML5"
+                "Win32"
             ]
         }
 	]
